# vector_poc

./: .dockerignore  .env.example  .gitignore  README.md  ansible.cfg  cloud-init.yml  devbox.json  docker-compose.yml  hosts  playbook.yml  pyproject.toml  requirements.txt  requirements.yml  taskfile.yml
config/alertmanager/: alertmanager.yml
config/grafana/: grafana.ini
config/grafana/dashboards/: sample-dashboard.json  vector.json
config/grafana/provisioning/datasources/: datasource.yml
config/loki/: config.yml
config/minio/: init.sh
config/nginx/: nginx.conf
config/prometheus/: prometheus.yml
config/vector/: vector.yml
molecule/default/: converge.yml  molecule.yml  verify.yml
taskfiles/: orbstack.yml  poetry.yml
vagrant/: Vagrantfile.ubuntu
