[tool.poetry]
name = "vector-poc"
version = "0.1.0"
description = ""
authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"]
license = "Unlicense"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ansible-compat = "^24.10.0"
ansible-core = "^2.18.1"
ansible-dev-tools = "^24.12.0"
ansible-lint = {version = "^24.12.2", markers = "platform_system != 'Windows'"}
ansible-pylibssh = "^1.2.2"
ansibug = "^0.1.2"
docker = "^7.1.0"
eliot = "^1.16.0"
molecule = "^24.12.0"
molecule-plugins = {extras = ["docker", "vagrant"], version = "^23.6.0"}
pexpect = "^4.9.0"
python-decouple = "^3.8"
python-nmap = "^0.7.1"
redis = "5.0.8"
requests = "^2.32.3"
requests-cache = "^1.2.1"
wheel = "^0.43.0"
yamllint = "^1.35.1"

[tool.poetry.group.dev.dependencies]
argcomplete = "^3.5.3"
icecream = "^2.1.4"
ipython = "^8.31.0"
poetry-plugin-export = "^1.8.0"
poetry-plugin-up = "^0.8.0"
pyclean = "^3.0.0"
rich = "^13.9.4"
ruff = "^0.0.270"

[tool.uv.pip]
index-url = "https://pypi.org/simple"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []
# Skip unused variable rules
extend-ignore = ["D203", "E203", "E251", "E266", "E401", "E402", "E501", "F401", "F403"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    "dist",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    "__pycache__",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Black (default: 88)
line-length = 130

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
